<resources>
    <string name="app_name">COMP2000</string>
    <string name="home">Home</string>
    <string name="holidays">Holidays</string>
    <string name="holiday_requests">Holiday Requests</string>
    <string name="account">Account</string>
    <string name="account_settings">Account Settings</string>
    <string name="book_holiday">Book Holiday</string>
    <string name="notifications">Notifications</string>
    <string name="remaining_days"> Remaining Days: </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="edit">EDIT</string>
    <string name="employee_records">Employee Records</string>
    <string name="employee_record">Employee Record</string>
    <string name="search">Search</string>
    <string name="edit_record">Edit Record</string>
    <string name="delete_record">Delete Record</string>
    <string name="forename">Forename</string>
    <string name="surname">Surname</string>
    <string name="employee_id">Employee ID</string>
    <string name="profile_image">Profile Image</string>
    <string name="name">Name</string>
    <string name="hashtag">#</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="requested_by">Requested by</string>
    <string name="records">Records</string>
    <string name="settings">Settings</string>
    <string name="requests">Requests</string>
    <string name="employee">Employee</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="comment">Comment</string>
    <string name="status">Status</string>
    <string name="holiday_request">Holiday Request</string>
    <string name="request_date">Request Date</string>
    <string name="review_date">Review Date</string>
    <string name="reviewed_by">Reviewed by</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="submit">Submit</string>
    <string name="new_record">New Record</string>
    <string name="new_holiday_requests">New Holiday Requests</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="credentials_do_not_match"> Incorrect login credentials.</string>
    <string name="sign_in">Sign In</string>
    <string name="manage">Manage</string>
    <string name="already_exists"> An Employee with this ID already exists. Try a different ID. </string>
    <string name="server_error"> A server error occurred. Please try again later. </string>
    <string name="required_fields"> All fields must be filled in. </string>
    <string name="loading">Loading..</string>
    <string name="view">View</string>
    <string name="empty">  </string>
    <string name="delete_confirmation"> Are you sure you want to delete this record? </string>
    <string name="welcome_back">Welcome back,</string>
    <string name="log_out">Log Out</string>
    <string name="change_password">Change Password</string>
    <string name="holiday_notifications">Receive notifications regarding holiday requests</string>
    <string name="all_notifications">Receive push notifications</string>
    <string name="preferences">Preferences</string>
</resources>