<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/accountConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AccountFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/accountToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/accountToolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/account_settings"
            android:textColor="@color/gray_900"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="138dp"
            tools:layout_editor_absoluteY="16dp" />

    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="12dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountToolbar">

        <TextView
            android:id="@+id/preferencesLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/preferences"
            android:textColor="@color/gray_900"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="207dp"
            tools:layout_editor_absoluteY="287dp" />

        <CheckBox
            android:id="@+id/receiveNotificationsCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/all_notifications"
            android:textColor="@color/gray_700"
            android:textSize="16sp"
            android:paddingStart="8dp"
            tools:layout_editor_absoluteX="105dp"
            tools:layout_editor_absoluteY="372dp"
            tools:ignore="RtlSymmetry" />

        <CheckBox
            android:id="@+id/receiveHolidayNotificationsCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/holiday_notifications"
            android:textColor="@color/gray_700"
            android:textSize="16sp"
            android:paddingStart="8dp"
            tools:layout_editor_absoluteX="105dp"
            tools:layout_editor_absoluteY="311dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/accountLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/account"
            android:textColor="@color/gray_900"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="207dp"
            tools:layout_editor_absoluteY="287dp" />

        <Button
            android:id="@+id/changePasswordBtn"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_medium"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/change_password" />

        <Button
            android:id="@+id/logOutButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/log_out"
            android:textAllCaps="false"
            android:textColor="@color/gray_700"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>