<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/holidayRequestConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HolidayRequestFragment" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/holidayRequestToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_arrow_back"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/holiday_rq_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/holiday_request"
            android:textColor="@color/gray_900"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="138dp"
            tools:layout_editor_absoluteY="16dp" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/holidayRequestToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="24dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/requestFromLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textAllCaps="false"
                android:textColor="@color/gray_600"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/requestFromValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/from"
                android:textColor="@color/gray_900"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/requestToLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textAllCaps="false"
                android:textColor="@color/gray_600"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/requestToValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/to"
                android:textColor="@color/gray_900"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/dateRequestedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request_date"
                android:textAllCaps="false"
                android:textColor="@color/gray_600"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/dateRequestedValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/request_date"
                android:layout_marginBottom="20dp"
                android:textColor="@color/gray_900"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/requestRequestedByLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/requested_by"
                android:textAllCaps="false"
                android:textColor="@color/gray_600"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/requestRequestedByValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/requested_by"
                android:textColor="@color/gray_900"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/requestStatusLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textAllCaps="false"
                android:textColor="@color/gray_600"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/requestStatusValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/status"
                android:textColor="@color/gray_900"
                android:textSize="16sp" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="25dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/commentLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comment"
                android:textAllCaps="false"
                android:textColor="@color/gray_600"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/commentValue"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:textColorHint="@color/gray_600"
                android:gravity="start|top"
                android:hint="@string/comment"
                android:inputType="textMultiLine"
                android:padding="12dp"
                android:autofillHints="" />

            <Button
                android:id="@+id/approveButton"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/approve"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/rejectButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/reject"
                android:textAllCaps="false"
                android:textColor="@color/gray_700"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>